--- a/app/leaderboard/leaderboard.component.html
+++ b/app/leaderboard/leaderboard.component.html
@@ -16,7 +16,7 @@
             <!-- <span class="level">level {{ player.level }}</span> -->
           </div>
           <ul class="leaderboard-list__badges">
-            <li *ngFor="let badge of player.badges" ><img src="http://apocalypternet.devmerix.com{{ badge.badge.image }}" alt="{{ badge.badge.name }}" /> </li>
+            <li *ngFor="let badge of player.badges" ><img src="https://apocalypternet.devmerix.com{{ badge.badge.image }}" alt="{{ badge.badge.name }}" /> </li>
           </ul>
         </div>
 
